# developer

./: .gitignore  Makefile  README.md  TESTING_LOCAL_LLMS.md  angular.json  config.py  csv_handler.py  data_processing.py  database.py  feature_automated_dependency_management.md  feature_enhanced_shared_dependencies_management.md  feature_import_existing_codebase.md  feature_local_llm_support.md  feature_self_correction_loop.md  feature_version_control_integration.md  file_handler.py  interaction.py  llm_prompting_strategy.md  main.py  model.py  package.json  pyproject.toml  readme.md  shared_dependencies.md  shared_deps.schema.json  shared_deps_schema.md  update_process_for_shared_deps.md  utils.py
UBLeague/: index.html  info.txt  package.json
prompt_templates/: llm_studio_templates.md
smol-dev-prompt-builder/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  package-lock.json  package.json  tsconfig.json
smol_dev/: __init__.py  api.py  autodebug.py  llm.py  main.py  prompts.py  self_heal.py  utils.py
src/: App.tsx  data_loader.py  drew.py  edge.py  effective_resistance.py  efficiently_predicting_high_resolution_mass_spectra_with_graph_neural_networks.py  equivariant_gnn.py  ewald_message_passing.py  expander_graph_propagation.py  exphormer.py  extension.ts  faenet.py  generalization_of_vit_mlp_mixer_to_graphs.py  geoldm.py  geometric_clifford_algebra_networks.py  geometric_wl.py  goat.py  graph_gps.py  graphically_structured_diffusion_models.py  grit.py  halfhop.py  index.html  index.tsx  ingram.py  main.py  mpnnns_with_virtual_nodes.py  preprocessing.py  (+7 more)
(+55 files in other folders)
