[tool.poetry]
name = "smol_dev"
version = "0.0.3"
description = "python module of smol developer"
authors = ["swyx <swyx@dontemail.me>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "smol_dev" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
openai = "^1.0.0"
tenacity = "^8.2.2"
agent-protocol = "^1.0.0"
transformers = "^4.38.2"
numpy = "<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "smol_dev.api:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/smol-ai/developer"
"Bug Tracker" = "https://github.com/smol-ai/developer/issues"
